@@ -1,6 +1,7 @@
 --- CHANGELOG ---
 --- Assimulo-3.4.4 ---
     * Changed "numpy.float" to equivalent "numpy.float64" due to DeprecationWarnings in numpy >= 1.20.
+    * Improved examples with sparse jacobians by omitting the zeros in the jacobians.
 
 --- Assimulo-3.4.3 ---
     * Improved compliance with newer scipy version by instead using corresponding numpy calls when more suitable.
